# diff_detect

./: .gitignore  README.md  app.py  draft.txt  models.py  notes.md  pyproject.toml  pyrightconfig.json  requirements.txt  study_storage.py
.streamlit/: config.toml  secrets.toml.example
data/: rounds.json  seeded_annotations.json
data/butterfly/: butterfly.json  butterfly_difficult.json  butterfly_easy.json  dummy.json
data/hf_heliconius/: rounds.json  seeded_annotations.json
schema/: supabase.sql
scripts/: check_supabase_schema.py  generate_challenge.py  generate_rounds.py  generate_rounds_hf_heliconius_.py  import_ai_annotations.py  import_dummy_explanations.py  replace_userid.sh
src/diff_detect/: __init__.py  _builder.py  _challenge_selection_page.py  _leaderboard_page.py  _login_page.py  _page_utils.py  _pages.py  _patch_canvas_toolbar.py  _state.py  _task_page.py  _utils.py  ai_annotations.py  app.py  app_old.py  challenges.py  common.py  models.py  models_old.py  storage.py  storage_old.py  storage_sqlite.py  storage_supabase.py  study_storage.py
src/diff_detect/_storage/: __init__.py  _storage_sqlite.py  _storage_supabase.py
src/diff_detect/pages/: __init__.py  _builder.py  _login.py  _utils.py
supabase/migrations/: 20260626193000_create_study_tables.sql  20260626200000_add_multilabel_annotations.sql  20260630133000_create_model_tables.sql
tests/: test_explain_rendering.py  test_storage.py  test_study_storage.py
